simple-spring-amq/src/kube/simple-spring-amq-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: 2016-03-22T16:34:26Z
  labels:
    component: simple-spring-amq
    group: quickstarts
    project: simple-spring-amq
    provider: fabric8
    version: 1.0-SNAPSHOT
  name: simple-spring-amq
  namespace: activemq-broker-ns
  resourceVersion: "2981"
  selfLink: /api/v1/namespaces/symphony-eu-amq/services/my-broker-1
  uid: f167b560-f04b-11e5-a955-52540013d96e
spec:
  ports:
  - name: amq
    port: 61616
    protocol: TCP
    targetPort: 61616
  - name: jolokia
    port: 8787
    protocol: TCP
    targetPort: 8787
  selector:
    component: simple-spring-amq
    group: quickstarts
    project:  simple-spring-amq
    provider: fabric8
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
